--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h3>Email me at <a href="mailto:pnitto18@gmail.com">pnitto18@gmail.com</a></h3>
   <hr>
   <div class="container">
-    <img src="me.jpeg">
+    <img src="me.jpeg" alt="You should be a picture of the tetons.">
   </div>
   <ul class="site-links">
     <li class="links"><a href="https://facebook.com"><strong>Facebook</strong></a></li>
